--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                 <a class="nav-link px-0" href="#skills">Skills</a>
             </li> -->
             <li class="nav-item">
-                <a class="nav-link px-0" href="#projects">Projects</a>
+                <a class="nav-link px-0" href="#project">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-0" href="#contact">contact</a>
             </li>
         </ul>
         </div>
@@ -267,10 +270,11 @@
                 <ul class="d-flex justify-content-center align-items-center flex-wrap gap-4">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <!-- <li><a href="#education">Education</a></li> -->
-                    <li><a href="#sevices">sevices</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <!-- <li><a href="#sevices">sevices</a></li>
+                    <li><a href="#skills">Skills</a></li> -->
                     <li><a href="#project">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="copyroght">
