--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link px-0" href="#project">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link px-0" href="#contact">contact</a>
+                <a class="nav-link px-0" href="#contact">Contact</a>
             </li>
         </ul>
         </div>
