--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Protfoilo</title>
 </head>
@@ -26,6 +29,9 @@
                 <a class="nav-link px-0" href="#about">About</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link px-0" href="#project">Projects</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link px-0" href="#education">Education</a>
             </li>
             <!-- <li class="nav-item">
@@ -34,9 +40,6 @@
             <!-- <li class="nav-item">
                 <a class="nav-link px-0" href="#skills">Skills</a>
             </li> -->
-            <li class="nav-item">
-                <a class="nav-link px-0" href="#project">Projects</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link px-0" href="#contact">Contact</a>
             </li>
@@ -76,7 +79,17 @@
                     <div class="info">
                         <h1>Hi, It's <span>Adel</span></h1>
                         <h3 class="text-animated">I'm a <span></span></h3>
-                        <p>Committed individual adept in efficiently utilizing available resources in completing assigned tasks. Seeking an entry-level position as a fresh graduate , to gain experience from the companies and organizations and build my career with it.</p>
+                        <p>My name is Adel Nasser, and I'm a dedicated and results-driven Frontend Developer with over 3 years of hands-on experience in building responsive and user-friendly web applications. 
+                            I specialize in leveraging modern web technologies such as HTML5, CSS3, JavaScript, TypeScript, and Angular to deliver high-performance solutions.
+                            <br>
+                            Throughout my career, I have honed my expertise in frameworks and libraries including jQuery, Bootstrap, Tailwind, and SASS.
+                            <br>
+                            I'm also well-versed in integrating APIs, object-oriented programming (OOP), and maintaining code efficiency with tools like NPM, Git, and GitHub. 
+                            My deep understanding of web performance optimization, cross-browser compatibility, and responsive web design ensures that I create seamless user experiences across various platforms and devices.
+                            <br>
+                            Angular has been my primary focus, where I enjoy solving complex problems and transforming ideas into dynamic, interactive interfaces.
+                            <br>
+                            I'm passionate about staying updated with the latest industry trends and continuously improving my skills to deliver innovative solutions.</p>
                     </div>
                     <div class="social-icons d-flex justify-content-start align-items-center gap-3">
                         <a href="https://www.linkedin.com/in/adel-nasser-50a90b241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
@@ -87,6 +100,92 @@
             </div>
             
         </div>
+    </div>
+</section>
+
+<section id="project" class="py-4">
+    <div class="container">
+        <h2 class="text-center mb-3">Projects</h2>
+        <div class="slide-project d-flex justify-content-center align-items-center gap-1">
+            <img src="image/freshcart1.png" alt="">
+            <img src="image/book-fair.png" alt="">
+            <img src="image/game-reveiws.png" alt="">
+            <img src="image/yummy.png" alt="">
+            <img src="image/weather.png" alt="">
+        </div>
+        <div class="project-info">
+            <div class="row">
+                <div class="col-12">
+                    <div class="box-project">
+                        <h3>FreshCart</h3>
+                        <ul>
+                            <li class="mb-3"><a class="proj-link" href="https://freshcartsiteecommerce.netlify.app" target="_blank"><i class="fa-solid fa-earth-americas"></i> freshcartsiteecommerce.netlify.app</a></li>
+                            <li>- Integrated external APIs, leveraging Angular's powerful features such as interfaces, routing, services, pipes, models, and guards.</li>
+                            <li>- Implemented user authentication and authorization mechanisms using Angular, ensuring secure access to the website's functionalities.</li>
+                            <li>- Home Page: The home page serves as the central hub, displaying various sections to engage users. </li>
+                            <li>- Categories: The website organizes products into different categories, allowing users to browse and explore items based on their interests. Each category presents a collection of related products. </li>
+                            <li>- Product Search: Users can utilize a search functionality to find specific products by name.</li>
+                            <li>- Product Details Page: Each product has a dedicated details page that offers comprehensive information.</li>
+                            <li>- Cart Page: The cart page displays a summary of the items users have added for purchase. Users can view quantities, update product options, and remove items if needed.</li>
+                            <li>-WhishList Page : This page contains products that you may want to purchase at a later time.</li>
+                            <li>- Payment Page: Once users proceed to checkout, they are redirected to a secure payment page. This page is hosted by a trusted payment gateway provider.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="box-project">
+                        <h3>Games Reviews</h3>
+                        <ul>
+                            <li class="mb-3"><a class="proj-link" href="https://an-fahmy.github.io/Games-Review/" target="_blank"><i class="fa-solid fa-earth-americas"></i> an-fahmy.github.io/Games-Review/</a></li>
+                            <li>- Developed with HTML, CSS, Javascript, OOP, APIs, jQuery, Bootstrap and some libraries.</li>
+                            <li>- OOP and API were used to fetch and display the content.</li>
+                            <li>- This site contains a lot of games and information about each game.</li>
+                            <li>- Each section contains its own games and is easy to navigate between sections.</li>
+                            <li>- Each game contains its own link where you can download it or play online.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="box-project">
+                        <h3>Weather</h3>
+                        <ul>
+                            <li class="mb-3"><a class="proj-link" href="https://an-fahmy.github.io/Weather-App/" target="_blank"><i class="fa-solid fa-earth-americas"></i> an-fahmy.github.io/Weather-App/</a></li>
+                            <li>- Developed with HTML , CSS, Bootstrap , Javascript, Some libraries And Integrated APIs to fetch accurate weather data. </li>
+                            <li>- Real-Time Updates: Provides current weather, hourly forecasts for the next 24 hours, and a 3-days weather forecast.</li>
+                            <li>- Geolocation: Automatic Location Detection and enabled location-based weather updates and city search functionality.</li>
+                            <li>- Responsive Design.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="box-project">
+                        <h3>Yummy</h3>
+                        <ul>
+                            <li class="mb-3"><a class="proj-link" href="https://an-fahmy.github.io/Yummy/" target="_blank"><i class="fa-solid fa-earth-americas"></i> an-fahmy.github.io/Yummy/</a></li>
+                            <li>- Developed with HTML , CSS , Javascript, APIs, jQuery, Bootstrap and some libraries.</li>
+                            <li>- Interactive Recipes: Explore favorite dishes from different regions and uncover the culinary secrets from around the world.</li>
+                            <li>- Browse by Areas: Enjoy viewing a variety of recipes from various regions with the ability to customize your experience by searching by recipe name or even just a letter. </li>
+                            <li>- Advanced Search: Quickly find your favorite dishes by searching with the full name or just a single letter.</li>
+                            <li>- Responsive Design: Enjoy a seamless experience on desktops, tablets, and smartphones with a fully responsive design.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="box-project">
+                        <h3>Book Fair</h3>
+                        <ul>
+                            <li class="mb-3"><a class="proj-link" href="https://thebookfair.netlify.app/home" target="_blank"><i class="fa-solid fa-earth-americas"></i> thebookfair.netlify.app/home</a></li>
+                            <li>- Integrated external APIs, leveraging Angular's powerful features such as interfaces, routing, services, pipes, models, and guards.</li>
+                            <li>- Home Page : It contains the most popular books, a club for modern books, and a section of book topics that you might be interested in reading about.</li>
+                            <li>- All books: You can find any book you want on this page and also search for a book by its name.</li>
+                            <li>- Authors: This page contains many authors, and you can search for an author by their name, and all their works will appear.</li>
+                            <li>- Topics: Through this page, you can search for a specific topic, and books related to that topic will appear.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 
@@ -150,91 +249,7 @@
     </div>
 </section> -->
 
-<section id="project" class="py-4">
-    <div class="container">
-        <h2 class="text-center mb-3">Projects</h2>
-        <div class="slide-project d-flex justify-content-center align-items-center gap-1">
-            <img src="image/freshcart1.png" alt="">
-            <img src="image/book-fair.png" alt="">
-            <img src="image/game-reveiws.png" alt="">
-            <img src="image/yummy.png" alt="">
-            <img src="image/weather.png" alt="">
-        </div>
-        <div class="project-info">
-            <div class="row">
-                <div class="col-12">
-                    <div class="box-project">
-                        <h3>FreshCart</h3>
-                        <ul>
-                            <li class="mb-3"><a href="https://freshcartsiteecommerce.netlify.app" target="_blank"><i class="fa-solid fa-earth-americas"></i> freshcartsiteecommerce.netlify.app</a></li>
-                            <li>- Integrated external APIs, leveraging Angular's powerful features such as interfaces, routing, services, pipes, models, and guards.</li>
-                            <li>- Implemented user authentication and authorization mechanisms using Angular, ensuring secure access to the website's functionalities.</li>
-                            <li>- Home Page: The home page serves as the central hub, displaying various sections to engage users. </li>
-                            <li>- Categories: The website organizes products into different categories, allowing users to browse and explore items based on their interests. Each category presents a collection of related products. </li>
-                            <li>- Product Search: Users can utilize a search functionality to find specific products by name.</li>
-                            <li>- Product Details Page: Each product has a dedicated details page that offers comprehensive information.</li>
-                            <li>- Cart Page: The cart page displays a summary of the items users have added for purchase. Users can view quantities, update product options, and remove items if needed.</li>
-                            <li>-WhishList Page : This page contains products that you may want to purchase at a later time.</li>
-                            <li>- Payment Page: Once users proceed to checkout, they are redirected to a secure payment page. This page is hosted by a trusted payment gateway provider.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="box-project">
-                        <h3>Games Reviews</h3>
-                        <ul>
-                            <li class="mb-3"><a href="https://an-fahmy.github.io/Games-Review/" target="_blank"><i class="fa-solid fa-earth-americas"></i> an-fahmy.github.io/Games-Review/</a></li>
-                            <li>- Developed with HTML, CSS, Javascript, OOP, APIs, jQuery, Bootstrap and some libraries.</li>
-                            <li>- OOP and API were used to fetch and display the content.</li>
-                            <li>- This site contains a lot of games and information about each game.</li>
-                            <li>- Each section contains its own games and is easy to navigate between sections.</li>
-                            <li>- Each game contains its own link where you can download it or play online.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="box-project">
-                        <h3>Weather</h3>
-                        <ul>
-                            <li class="mb-3"><a href="https://an-fahmy.github.io/Weather-App/" target="_blank"><i class="fa-solid fa-earth-americas"></i> an-fahmy.github.io/Weather-App/</a></li>
-                            <li>- Developed with HTML , CSS, Bootstrap , Javascript, Some libraries And Integrated APIs to fetch accurate weather data. </li>
-                            <li>- Real-Time Updates: Provides current weather, hourly forecasts for the next 24 hours, and a 3-days weather forecast.</li>
-                            <li>- Geolocation: Automatic Location Detection and enabled location-based weather updates and city search functionality.</li>
-                            <li>- Responsive Design.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="box-project">
-                        <h3>Yummy</h3>
-                        <ul>
-                            <li class="mb-3"><a href="https://an-fahmy.github.io/Yummy/" target="_blank"><i class="fa-solid fa-earth-americas"></i> an-fahmy.github.io/Yummy/</a></li>
-                            <li>- Developed with HTML , CSS , Javascript, APIs, jQuery, Bootstrap and some libraries.</li>
-                            <li>- Interactive Recipes: Explore favorite dishes from different regions and uncover the culinary secrets from around the world.</li>
-                            <li>- Browse by Areas: Enjoy viewing a variety of recipes from various regions with the ability to customize your experience by searching by recipe name or even just a letter. </li>
-                            <li>- Advanced Search: Quickly find your favorite dishes by searching with the full name or just a single letter.</li>
-                            <li>- Responsive Design: Enjoy a seamless experience on desktops, tablets, and smartphones with a fully responsive design.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="box-project">
-                        <h3>Book Fair</h3>
-                        <ul>
-                            <li class="mb-3"><a href="https://thebookfair.netlify.app/home" target="_blank"><i class="fa-solid fa-earth-americas"></i> thebookfair.netlify.app/home</a></li>
-                            <li>- Integrated external APIs, leveraging Angular's powerful features such as interfaces, routing, services, pipes, models, and guards.</li>
-                            <li>- Home Page : It contains the most popular books, a club for modern books, and a section of book topics that you might be interested in reading about.</li>
-                            <li>- All books: You can find any book you want on this page and also search for a book by its name.</li>
-                            <li>- Authors: This page contains many authors, and you can search for an author by their name, and all their works will appear.</li>
-                            <li>- Topics: Through this page, you can search for a specific topic, and books related to that topic will appear.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-    </div>
-</section>
 
 
 <section class="contact py-4" id="contact">
@@ -255,7 +270,6 @@
             </div>
         </form>
     </div>
-
 </section>
 
 <footer class="text-center position-relative py-5 overflow-hidden">
