--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>Protfoilo</title>
+    <title>Portfolio</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#scroll-active">
 
