--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 </section>
 
-<section id="about" class="about py-5">
+<section id="about" class="about py-4">
     <div class="container">
         <div class="row g-5">
             <div class="col-md-6">
@@ -105,7 +105,7 @@
 
 <section id="project" class="py-4">
     <div class="container">
-        <h2 class="text-center mb-3">Projects</h2>
+        <h2 class="text-center mb-3 h1">Projects</h2>
         <div class="slide-project d-flex justify-content-center align-items-center gap-1">
             <img src="image/freshcart1.png" alt="">
             <img src="image/book-fair.png" alt="">
@@ -129,6 +129,19 @@
                             <li>- Cart Page: The cart page displays a summary of the items users have added for purchase. Users can view quantities, update product options, and remove items if needed.</li>
                             <li>-WhishList Page : This page contains products that you may want to purchase at a later time.</li>
                             <li>- Payment Page: Once users proceed to checkout, they are redirected to a secure payment page. This page is hosted by a trusted payment gateway provider.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="box-project">
+                        <h3>Book Fair</h3>
+                        <ul>
+                            <li class="mb-3"><a class="proj-link" href="https://thebookfair.netlify.app/home" target="_blank"><i class="fa-solid fa-earth-americas"></i> thebookfair.netlify.app/home</a></li>
+                            <li>- Integrated external APIs, leveraging Angular's powerful features such as interfaces, routing, services, pipes, models, and guards.</li>
+                            <li>- Home Page : It contains the most popular books, a club for modern books, and a section of book topics that you might be interested in reading about.</li>
+                            <li>- All books: You can find any book you want on this page and also search for a book by its name.</li>
+                            <li>- Authors: This page contains many authors, and you can search for an author by their name, and all their works will appear.</li>
+                            <li>- Topics: Through this page, you can search for a specific topic, and books related to that topic will appear.</li>
                         </ul>
                     </div>
                 </div>
@@ -170,28 +183,104 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="box-project">
-                        <h3>Book Fair</h3>
-                        <ul>
-                            <li class="mb-3"><a class="proj-link" href="https://thebookfair.netlify.app/home" target="_blank"><i class="fa-solid fa-earth-americas"></i> thebookfair.netlify.app/home</a></li>
-                            <li>- Integrated external APIs, leveraging Angular's powerful features such as interfaces, routing, services, pipes, models, and guards.</li>
-                            <li>- Home Page : It contains the most popular books, a club for modern books, and a section of book topics that you might be interested in reading about.</li>
-                            <li>- All books: You can find any book you want on this page and also search for a book by its name.</li>
-                            <li>- Authors: This page contains many authors, and you can search for an author by their name, and all their works will appear.</li>
-                            <li>- Topics: Through this page, you can search for a specific topic, and books related to that topic will appear.</li>
-                        </ul>
-                    </div>
-                </div>
+                
             </div>
         </div>
 
     </div>
 </section>
 
+<section id="skills" class="skills py-4">
+    <div class="container">
+        <h2 class="text-center mb-3 h1">Skills</h2>
+        <div class="row text-center g-4">
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-html5"></i>
+                    <h4>HTML5</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-css3-alt"></i>
+                    <h4>CSS3</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-js"></i>
+                    <h4>JavaScript</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <img src="image/ts.png" class="w-25 rounded-circle mb-2" alt="">
+                    <h4>TypeScript</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-angular"></i>
+                    <h4>Angular</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-sass"></i>
+                    <h4>Scss</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <img src="image/jquery.jpeg" class="w-25 rounded-circle mb-2" alt="">
+                    <h4>jQuery</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-bootstrap"></i>
+                    <h4>Bootstrap</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <img src="image/tailwindcss.jpg" class="w-25 rounded-circle mb-2" alt="Tailwindcss">
+                    <h4>Tailwindcss</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-github"></i>
+                    <h4>Git & Github</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-figma"></i>
+                    <h4>Figma</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="skill-box p-3 rounded-1">
+                    <i class="fa-brands mb-2 fa-npm"></i>
+                    <h4>NPM</h4>
+                </div>
+            </div>
+        </div>
+        <div class="skills-info mt-4">
+            <div>
+                <h4>Web Technologies: </h4>
+                <p class="ms-5">
+                    HTML5 , CSS3, Javascript, Typescript, Angular, jQuery, Bootstrap, Tailwind, SCSS, APIs, OOP, NPM, Git & GitHub, Regular Expression, Responsive Web Design, Cross-Browser Compatibility, Web Performance, Directives, Data Binding, Routing, Routing Guards, LazyLoading, PIPEs, Forms Validation, Services, Interface, Interceptor, Figma. 
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="education" class="py-4">
     <div class="container">
-        <h2>Education & Courses</h2>
+        <h2 class="h1 text-center mb-3">Education & Courses</h2>
         <div class="timeline-items">
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
@@ -249,12 +338,9 @@
     </div>
 </section> -->
 
-
-
-
 <section class="contact py-4" id="contact">
     <div class="container">
-        <h2 class="text-center my-4">Contact <span>Me</span></h2>
+        <h2 class="text-center my-4 h1">Contact <span>Me</span></h2>
         <form class="d-flex justify-content-center align-items-center flex-column gap-3" action="https://formspree.io/f/mldrylyl" method="post">
             <div class="form-group">
                 <div class="input-box d-flex justify-content-center align-items-center flex-wrap gap-2">
