--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div>
                 <h4>Web Technologies: </h4>
                 <p class="ms-5">
-                    HTML5 , CSS3, Javascript, Typescript, Angular, jQuery, Bootstrap, Tailwind, SCSS, APIs, OOP, NPM, Git & GitHub, Regular Expression, Responsive Web Design, Cross-Browser Compatibility, Web Performance, Directives, Data Binding, Routing, Routing Guards, LazyLoading, PIPEs, Forms Validation, Services, Interface, Interceptor, Figma. 
+                    HTML5 , CSS3, Javascript, Typescript, Angular, jQuery, Bootstrap, Tailwind, SCSS, APIs, OOP, NPM, Git & GitHub, Regular Expression, Responsive Web Design, Cross-Browser Compatibility, Web Performance, Directives, Data Binding, Routing, Routing Guards, LazyLoading, PIPEs, Forms Validation, Services, Interface, Interceptor, Angular Material, PrimeNg, Figma. 
                 </p>
             </div>
         </div>
