--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 <a class="nav-link px-0" href="#project">Projects</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link px-0" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link px-0" href="#education">Education</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link px-0" href="#services">Services</a>
-            </li> -->
-            <!-- <li class="nav-item">
-                <a class="nav-link px-0" href="#skills">Skills</a>
             </li> -->
             <li class="nav-item">
                 <a class="nav-link px-0" href="#contact">Contact</a>
@@ -60,7 +60,7 @@
             <p class="fs-5 my-2">Front-End Developer | Angular</p>
         </div>
         <div class="btn-container z-2">
-            <button class="btn btn-outline-primary px-5 rounded-pill border-none"><a href="image/Resume Adel Nasser (1).pdf" download>Resume</a></button>
+            <button class="btn btn-outline-primary px-5 rounded-pill border-none"><a href="image/Resume Adel Nasser (2).pdf" download>Resume</a></button>
         </div>
         <div class="circle z-1"></div>
     </div>
@@ -71,7 +71,7 @@
         <div class="row g-5">
             <div class="col-md-6">
                 <div class="about-image d-flex justify-content-center align-items-center">
-                    <img src="image/photo.jpeg" class="about-img w-100 rounded-pill" alt="">
+                    <img src="image/photo.jpeg" class="about-img w-100" alt="">
                 </div>
             </div>
             <div class="col-md-6">
@@ -95,6 +95,7 @@
                         <a href="https://www.linkedin.com/in/adel-nasser-50a90b241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
                         <a href="https://github.com/AN-Fahmy" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
                         <a href="mailto:anfahmy92@gmail.com" target="_blank"><i class="fa-brands fa-google fa-lg"></i></a>
+                        <a href="https://wa.me/01147490434" target="_blank"><i class="fa-brands fa-whatsapp fs-3"></i></a>
                     </div>
                 </div>
             </div>
@@ -271,7 +272,7 @@
             <div>
                 <h4>Web Technologies: </h4>
                 <p class="ms-5">
-                    HTML5 , CSS3, Javascript, Typescript, Angular, jQuery, Bootstrap, Tailwind, SCSS, APIs, OOP, NPM, Git & GitHub, Regular Expression, Responsive Web Design, Cross-Browser Compatibility, Web Performance, Directives, Data Binding, Routing, Routing Guards, LazyLoading, PIPEs, Forms Validation, Services, Interface, Interceptor, Angular Material, PrimeNg, Figma. 
+                    HTML5, CSS3, Javascript, Typescript, Angular, jQuery, Bootstrap, Tailwind, SCSS, APIs, OOP, NPM, Git & GitHub, Regular Expression, Responsive Web Design, Cross-Browser Compatibility, Web Performance, Directives, Data Binding, Routing, Routing Guards, LazyLoading, PIPEs, Forms Validation, Services, Interface, Interceptor, Angular Material, PrimeNg and Figma. 
                 </p>
             </div>
         </div>
@@ -365,15 +366,16 @@
                 <a href="https://www.linkedin.com/in/adel-nasser-50a90b241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
                 <a href="https://github.com/AN-Fahmy" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
                 <a href="mailto:anfahmy92@gmail.com" target="_blank"><i class="fa-brands fa-google fa-lg"></i></a>
+                <a href="https://wa.me/01147490434" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
             </div>
             <div class="list">
                 <ul class="d-flex justify-content-center align-items-center flex-wrap gap-4">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <!-- <li><a href="#sevices">sevices</a></li>
-                    <li><a href="#skills">Skills</a></li> -->
+                    <!-- <li><a href="#sevices">sevices</a></li> -->
                     <li><a href="#project">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#education">Education</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
