--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
                             <br>
                             Angular has been my primary focus, where I enjoy solving complex problems and transforming ideas into dynamic, interactive interfaces.
                             <br>
-                            I'm passionate about staying updated with the latest industry trends and continuously improving my skills to deliver innovative solutions.</p>
+                            I'm passionate about staying updated with the latest industry trends and continuously improving my skills to deliver innovative solutions.
+                        </p>
                     </div>
                     <div class="social-icons d-flex justify-content-start align-items-center gap-3">
                         <a href="https://www.linkedin.com/in/adel-nasser-50a90b241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
                         <a href="https://github.com/AN-Fahmy" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
                         <a href="mailto:anfahmy92@gmail.com" target="_blank"><i class="fa-brands fa-google fa-lg"></i></a>
-                        <a href="https://wa.me/01147490434" target="_blank"><i class="fa-brands fa-whatsapp fs-3"></i></a>
+                        <a href="https://wa.me/+201147490434" target="_blank"><i class="fa-brands fa-whatsapp fs-3"></i></a>
                     </div>
                 </div>
             </div>
@@ -342,20 +343,48 @@
 <section class="contact py-4" id="contact">
     <div class="container">
         <h2 class="text-center my-4 h1">Contact <span>Me</span></h2>
-        <form class="d-flex justify-content-center align-items-center flex-column gap-3" action="https://formspree.io/f/mldrylyl" method="post">
-            <div class="form-group">
-                <div class="input-box d-flex justify-content-center align-items-center flex-wrap gap-2">
-                    <input class="w-75" type="text" name="name" placeholder="Full Name..." required>
-                    <input class="w-75" type="email" name="email" placeholder="Email..." required>
-                    <input class="w-75" type="tel" name="phone" placeholder="Phone Number..." required>
-                    <input class="w-75" type="text" name="subject" placeholder="Subject..." required>
-                    <textarea name="message" class="w-75" cols="30" rows="8" placeholder="Your Message..." required></textarea>
-                </div>
-                <div class="btn-style mb-5 mt-3">
-                    <button class="btnSumbit"><span>Submit</span></button>
+        <div class="row">
+            <div class="col-md-5">
+            <div>
+                <p>
+                    I'm a passionate Frontend Developer with expertise in Angular, focused on creating efficient and responsive web applications. If you'd like to discuss a project, collaborate, or simply ask a question, feel free to reach out. I'm always open to new opportunities and ideas.
+                    <ul class="p-0 d-flex justify-content-center align-items-start gap-3 flex-column">
+                        <li>
+                            <a href="mailto:anfahmy92@gmail.com" target="_blank"><i class="fa-brands fa-google fa-lg"></i> anfahmy92@gmail.com</a>
+                        </li>
+                        <li>
+                            <a href="https://wa.me/+201147490434" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i> (+2)01147490434</a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/adel-nasser-50a90b241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i> http://www.linkedin.com/in/adel-nasser-50a90b241</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/AN-Fahmy" target="_blank"><i class="fa-brands fa-github fa-lg"></i> https://github.com/AN-Fahmy </a>
+                        </li>
+                    </ul>
+                </p>
+            </div>
+
+            </div>
+            <div class="col-md-7">
+                <div>
+                    <form class="d-flex justify-content-center align-items-center flex-column gap-3" action="https://formspree.io/f/mldrylyl" method="post">
+                        <div class="form-group">
+                            <div class="input-box d-flex justify-content-center align-items-center flex-wrap gap-2">
+                                <input class="w-75" type="text" name="name" placeholder="Full Name..." required>
+                                <input class="w-75" type="email" name="email" placeholder="Email..." required>
+                                <input class="w-75" type="tel" name="phone" placeholder="Phone Number..." required>
+                                <input class="w-75" type="text" name="subject" placeholder="Subject..." required>
+                                <textarea name="message" class="w-75" cols="30" rows="8" placeholder="Your Message..." required></textarea>
+                            </div>
+                            <div class="btn-style mb-5 mt-3">
+                                <button class="btnSumbit"><span>Submit</span></button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 </section>
 
@@ -366,7 +395,7 @@
                 <a href="https://www.linkedin.com/in/adel-nasser-50a90b241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
                 <a href="https://github.com/AN-Fahmy" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
                 <a href="mailto:anfahmy92@gmail.com" target="_blank"><i class="fa-brands fa-google fa-lg"></i></a>
-                <a href="https://wa.me/01147490434" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+                <a href="https://wa.me/+201147490434" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
             </div>
             <div class="list">
                 <ul class="d-flex justify-content-center align-items-center flex-wrap gap-4">
@@ -385,8 +414,6 @@
         </div>
     </div>
 </footer>
-
-
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
